Admin Conten Counts

--- a/views/admin-dashboard.ejs
+++ b/views/admin-dashboard.ejs
@@ -214,7 +214,7 @@
 					<div class="d-flex justify-content-between align-items-center">
 						<!-- Digit -->
 						<div>
-							<h2 class="purecounter mb-0 fw-bold" data-purecounter-start="0" data-purecounter-end=""	data-purecounter-delay="200">0</h2>
+							<h2 class="purecounter mb-0 fw-bold" data-purecounter-start="0"	data-purecounter-delay="200" id="ScholarsTotalCount">0</h2>
 							<span class="mb-0 h6 fw-light">Registered Scholars</span>
 						</div>
 						<!-- Icon -->
@@ -229,7 +229,7 @@
 					<div class="d-flex justify-content-between align-items-center">
 						<!-- Digit -->
 						<div>
-							<h2 class="purecounter mb-0 fw-bold" data-purecounter-start="0" data-purecounter-end=""	data-purecounter-delay="200">0</h2>
+							<h2 class="purecounter mb-0 fw-bold" data-purecounter-start="0"	data-purecounter-delay="200" id="InstructorsTotalCount">0</h2>
 							<span class="mb-0 h6 fw-light">Registered Instructors</span>
 						</div>
 						<!-- Icon -->
@@ -244,7 +244,7 @@
 					<div class="d-flex justify-content-between align-items-center">
 						<!-- Digit -->
 						<div>
-							<h2 class="purecounter mb-0 fw-bold" data-purecounter-start="0" data-purecounter-end="" data-purecounter-delay="200">0</h2>
+							<h2 class="purecounter mb-0 fw-bold" data-purecounter-start="0" data-purecounter-delay="200" id="uploadedTotaluploadedRequests">0</h2>
 							<span class="mb-0 h6 fw-light">Uploaded Resources</span>
 						</div>
 						<!-- Icon -->
@@ -259,7 +259,7 @@
 					<div class="d-flex justify-content-between align-items-center">
 						<!-- Digit -->
 						<div>
-							<h2 class="purecounter mb-0 fw-bold" data-purecounter-start="0" data-purecounter-end="1600"	data-purecounter-delay="200">0</h2>
+							<h2 class="purecounter mb-0 fw-bold" data-purecounter-delay="200" id="EnrolledCourseCount">0</h2>
 							<span class="mb-0 h6 fw-light">Enrolled Courses</span>
 						</div>
 						<!-- Icon -->
@@ -274,7 +274,7 @@
 					<div class="d-flex justify-content-between align-items-center">
 						<!-- Digit -->
 						<div>
-							<h2 class="purecounter mb-0 fw-bold" data-purecounter-start="0" data-purecounter-end="" data-purecounter-delay="200">0</h2>
+							<h2 class="purecounter mb-0 fw-bold" data-purecounter-start="0" data-purecounter-delay="200" id="completedCourseCount">0</h2>
 							<span class="mb-0 h6 fw-light">Completed Courses</span>
 						</div>
 						<!-- Icon -->
@@ -291,7 +291,7 @@
 						<!-- Digit -->
 						<div>
 							<div class="d-flex">
-								<h2 class="purecounter mb-0 fw-bold" data-purecounter-start="0" data-purecounter-end=""	data-purecounter-delay="200">0</h2>
+								<h2 class="purecounter mb-0 fw-bold" data-purecounter-start="0"	data-purecounter-delay="200" id="PendingTotalPendingRequests">0</h2>
 							</div>
 							<span class="mb-0 h6 fw-light">Pending Requests</span>
 						</div>
@@ -479,9 +479,17 @@
 <script src="/assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
 <!-- Vendors -->
-<script src="/assets/vendor/purecounterjs/dist/purecounter_vanilla.js"></script>
 <script src="/assets/vendor/apexcharts/js/apexcharts.min.js"></script>
 <script src="/assets/vendor/overlay-scrollbar/js/overlayscrollbars.min.js"></script>
+<script src="/js/dashboard/completedCoursesCount.js"></script>
+<script src="/js/dashboard/enrolledCoursesCount.js"></script>
+<script src="/js/dashboard/pendingRequests.js"></script>
+<script src="/js/dashboard/registeredInstructorsCount.js"></script>
+<script src="/js/dashboard/registeredScholarsCount.js"></script>
+<script src="/js/dashboard/uploadedResourcesCount.js"></script>
+<!-- <script src="/assets/vendor/purecounterjs/dist/purecounter_vanilla.js"></script> -->
+
+
 
 <!-- Template Functions -->
 <script src="/assets/js/functions.js"></script>
