--- a/views/ScholarUploadRequests.ejs
+++ b/views/ScholarUploadRequests.ejs
@@ -202,7 +202,7 @@
 		<!-- Title -->
 		<div class="row mb-3">
 			<div class="col-12 d-sm-flex justify-content-between align-items-center">
-				<h1 class="h3 mb-2 mb-sm-0">Scholar Uploads</h1>
+				<h1 class="h3 mb-2 mb-sm-0">Upload Requests</h1>
 			</div>
 		</div>
 
