--- a/views/adminNavigation.ejs
+++ b/views/adminNavigation.ejs
@@ -15,13 +15,6 @@
         <!-- Submenu -->
         <ul class="nav collapse flex-column" id="collapsescholars" data-bs-parent="#navbar-sidebar">
             <li class="nav-item"> <a class="nav-link" href="/admin/students">Scholars</a></li>
-            <li class="nav-item"> <a class="nav-link" href="/admin/scholars/details">Scholar Detail</a></li>
-            <li class="nav-item"> 
-                <a class="nav-link" href="/admin/scholars/requests">Scholar Requests
-                    <span class="badge text-bg-success rounded-circle ms-2">2</span>
-                </a>
-            </li>
-            <li class="nav-item"> <a class="nav-link" href="/admin/scholars/uploadRequests">Upload Requests <span class="badge text-bg-success rounded-circle ms-2">2</span></a></li>
         </ul>
     </li>
 
@@ -33,13 +26,11 @@
         <!-- Submenu -->
         <ul class="nav collapse flex-column" id="collapseinstructors" data-bs-parent="#navbar-sidebar">
             <li class="nav-item"> <a class="nav-link" href="/admin/instructors">Instructors</a></li>
-            <li class="nav-item"> <a class="nav-link" href="/admin/instructors/details">Instructor Detail</a></li>
             <li class="nav-item"> 
                 <a class="nav-link" href="/admin/instructors/requests">Instructor requests
                     <span class="badge text-bg-success rounded-circle ms-2">2</span>
                 </a>
             </li>
-            <li class="nav-item"> <a class="nav-link" href="/admin/instructors/uploadRequests">Upload Requests <span class="badge text-bg-success rounded-circle ms-2">2</span></a></li>
         </ul>
     </li>
 
@@ -52,9 +43,9 @@
         <ul class="nav collapse flex-column" id="collapsepage" data-bs-parent="#navbar-sidebar">
             <li class="nav-item"> <a class="nav-link" href="/admin/courses">All Courses</a></li>
             <li class="nav-item"> <a class="nav-link" href="/admin/courses/categories">Course Category</a></li>
-            <li class="nav-item"> <a class="nav-link" href="/admin/course/details">Course Detail</a></li>
         </ul>
     </li>
+    <li class="nav-item"> <a class="nav-link" href="/admin/scholars/uploadRequests"><i class="far fa-file fa-fw me-2"></i>Upload Requests <span class="badge text-bg-success rounded-circle ms-2">2</span></a></li>
     
     <!-- Menu item 5 -->
     <li class="nav-item"> <a class="nav-link" href="/admin/review"><i class="far fa-comment-dots fa-fw me-2"></i>Reviews</a></li>
